QPID-2885: clean up memory leaks on C++ qmf console shutdown.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1000907 13f79535-47bb-0310-9956-ffa450edef68